# Gnashblade-Investments

./: .gitignore  Cargo.toml  create_and_configure_database.py  database_timestamp_conversion.py  get_prices_listings.py  main.py  materials.json
Gnashblade Database Retriever/: retrieve_db_from_remote.ps1  retrieve_db_from_remote.sh
Gnashblade Market Tracker/: Cargo.toml
Gnashblade Market Tracker/obsolete_python_version/material_price_listings/: GW2API_example.py  GW2TP_API_example.py  get_prices_listings.py
material_price_listings/: GW2Spidy_API_example.py  materials.json
src/: main.rs
