[package]
name = "gnashblade_market_tracker"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.79"
serde = "1.0.136"
serde_derive = "1.0.136"
reqwest = {version = "0.11.9",features = ["blocking","json"]}
error-chain = "0.12.4"
futures = "0.3" # for our async / await blocks
tokio = { version = "1.12.0", features = ["full"] }
rusqlite = { version = "*", features = ["bundled"] }
chrono = "0.4.19"
openssl = { version = "0.10", features = ["vendored"] }